--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %} {% block content %}
 
-<h1>Rooms</h1>
+<h1>HOME PAGE</h1>
 <section>
+  <a href="{% url 'create-room' %}">Create Room</a>
   <div>
     {% for room in rooms %}
     <div>
